<resources>
    <string name="app_name">Trainer Book</string>
    <string name="customer_name_hint">Enter name of customer</string>
    <string name="customer_name_label">Name</string>
    <string name="customer_info_label">Customer info</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_success">Successfully logged on</string>
    <string name="login_fail">Incorrect username or password</string>
    <string name="username">jdoe</string>
    <string name="password">welcome1</string>
    <string name="dialog_title">Logging off...</string>

    <string name="logged_in_string">Logged in: </string>
    <string name="print_text">Print</string>
    <string name="email_text">Send via Email, Messenger, Etc.</string>
    <string name="receipt_label">Receipt</string>
    <string name="billing_hint">Enter billing information</string>
    <string name="session_label">Session name</string>
    <string name="session_hint">Enter session name</string>
    <string name="session_completed_text">Session completed</string>
    <string name="new_customer">New Customer</string>
    <string name="log_off">Log Off</string>
    <string name="sign_here">Sign here</string>
    <string name="generate_receipt">Generate Receipt</string>
    <string name="new_session">New Session</string>
    <string name="save_button">Save</string>
    <string name="add_sessions">Sessions:</string>
    <string name="receipt_confirmation">Paid</string>
    <string name="unpaid_session">This session has not yet been paid for...</string>
    <string name="pay_button">Pay $%1$s</string>
    <string name="payment_successful">Payment successfully made!</string>
    <string name="receipt_subject">Trainer Book Receipt</string>
    <string name="chooser_label">Send receipt via</string>

    <string name="date_picker_title">Date customer joined:</string>
    <string name="date_picker_session_title">Date of session:</string>
</resources>
