<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/fragment3"
        android:name="com.bignerdranch.android.trainerbook.LoggedInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_label"/>

    <EditText
        android:id="@+id/session_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_hint"/>

    <Button
        android:id="@+id/session_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/session_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_completed_text"/>

    <EditText
        android:id="@+id/signature_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_here" />

    <Button
        android:id="@+id/receipt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_receipt" />

</LinearLayout>