<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/fragment"
        android:name="com.bignerdranch.android.trainerbook.LoggedInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"/>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_label" />

    <TextView
        android:id="@+id/receipt_session_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16pt"/>

    <TextView
        android:id="@+id/receipt_session_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16pt"/>

    <TextView
        android:id="@+id/receipt_session_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16pt" />

    <TextView
        android:id="@+id/receipt_session_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:text="@string/receipt_confirmation"/>

</LinearLayout>